# ultrasonic_sensor

./: .clang-format  .gitignore  .gitmodules  API.md  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: build.yml  host_test.yml
coverage/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/include/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  us_driver.hpp.func-c.html  us_driver.hpp.func.html  us_driver.hpp.gcov.html  us_processor.hpp.func-c.html  us_processor.hpp.func.html  us_processor.hpp.gcov.html  us_sensor.hpp.func-c.html  us_sensor.hpp.func.html  us_sensor.hpp.gcov.html  us_types.hpp.func-c.html  us_types.hpp.func.html  us_types.hpp.gcov.html
coverage/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  us_driver.cpp.func-c.html  us_driver.cpp.func.html  us_driver.cpp.gcov.html  us_processor.cpp.func-c.html  us_processor.cpp.func.html  us_processor.cpp.gcov.html  us_sensor.cpp.func-c.html  us_sensor.cpp.func.html  us_sensor.cpp.gcov.html
examples/basic_usage/: CMakeLists.txt
examples/basic_usage/main/: CMakeLists.txt  main.cpp
host_test/: CMakeLists.txt  README.md  coverage_common.cmake
host_test/gtest/: CMakeLists.txt
host_test/test_us_driver/: CMakeLists.txt  sdkconfig.defaults
host_test/test_us_driver/main/: CMakeLists.txt  main.cpp  test_us_driver.cpp
host_test/test_us_processor/: CMakeLists.txt
host_test/test_us_processor/main/: CMakeLists.txt  test_us_processor.cpp
host_test/test_us_sensor/: CMakeLists.txt
host_test/test_us_sensor/main/: CMakeLists.txt  test_us_sensor.cpp
include/: i_us_gpio_hal.hpp  i_us_timer_hal.hpp  us_driver.hpp  us_gpio_hal.hpp  us_processor.hpp  us_sensor.hpp  us_timer_hal.hpp  us_types.hpp
include/interfaces/: i_us_driver.hpp  i_us_gpio_hal.hpp  i_us_processor.hpp  i_us_sensor.hpp  i_us_timer_hal.hpp
src/: us_driver.cpp  us_gpio_hal.cpp  us_processor.cpp  us_sensor.cpp  us_timer_hal.cpp
test_apps/build_test/main/: main.cpp
test_apps/test_build/: CMakeLists.txt
test_apps/test_build/main/: CMakeLists.txt  main.cpp
